--- a/Frontend/src/app/modules/auth/login/login.component.html
+++ b/Frontend/src/app/modules/auth/login/login.component.html
@@ -9,7 +9,7 @@
           </div>
           <div class="form-group">
             <label>Password</label>
-            <input type="password" class="form-control border-secondary" formControlName="userPassword" />
+            <input type="password" class="form-control border-secondary" formControlName="password" />
           </div>
           <button type="submit" value="Submit" style="border-radius: 12px;" class="btn btn-primary btn-lg btn-block mt-5 mb-2" [disabled]="loginForm.invalid">
             Login
