--- a/Frontend/src/app/layout/content-layout/content-layout.component.html
+++ b/Frontend/src/app/layout/content-layout/content-layout.component.html
@@ -1,2 +1,4 @@
 <app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<div class="container pt-5 px-5 px-md-2">
+    <router-outlet></router-outlet>
+</div>
