Student page to exam page link with navbar change

--- a/Frontend/src/app/modules/student/student-dashboard/student-dashboard.component.html
+++ b/Frontend/src/app/modules/student/student-dashboard/student-dashboard.component.html
@@ -1,23 +1,21 @@
-
-<div class="container pt-5 px-5 px-md-2">
-    <div class="col-md-6 m-auto">
-        <h2>Exam Details</h2>
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Artificial Intelligence </h5>
-                <span class="card-text">Exam date : 12/12/2012</span>
-                <br>
-                <span class="card-text">Exam time : 1 PM to 4 PM</span>
-            </div>
-        </div>
-        <h2 class="pt-2">Future Exam Details</h2>
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Artificial Intelligence </h5>
-                <p class="card-text">Exam date : 12/12/2012</p>
-                <p class="card-text">Exam time : 1 PM to 4 PM</p>
-            </div>
+<div class="col-md-6 m-auto">
+    <h2>Exam Details</h2>
+    <div class="card">
+        <div class="card-body">
+            <h5>
+                <a class="card-title" routerLink="/student/exam"> Artificial Intelligence </a>
+            </h5>
+            <span class="card-text">Exam date : 24/04/2022</span>
+            <br>
+            <span class="card-text">Exam time : 1 PM to 4 PM</span>
         </div>
     </div>
-
+    <h2 class="pt-2">Future Exam Details</h2>
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title">Machine Learning </h5>
+            <p class="card-text">Exam date : 01/05/2022</p>
+            <p class="card-text">Exam time : 1 PM to 4 PM</p>
+        </div>
+    </div>
 </div>
